--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     implementation 'com.android.support:support-v4:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-
+    implementation 'com.github.alamkanak:android-week-view:1.2.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+
 }
